<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/placeholder"
            android:textSize="85dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ce"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/ce"/>

            <Button
                android:id="@+id/c"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/c"/>
            <Button
                android:id="@+id/back"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/back"/>
            <Button
                android:id="@+id/bagi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/bagi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/tujuh"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/tujuh"/>
            <Button
                android:id="@+id/delapan"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/delapan"/>
            <Button
                android:id="@+id/sembilan"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/sembilan"/>
            <Button
                android:id="@+id/kali"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/kali"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/empat"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/empat"/>
            <Button
                android:id="@+id/lima"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/lima"/>
            <Button
                android:id="@+id/enam"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/enam"/>
            <Button
                android:id="@+id/kurang"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/kurang"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/satu"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/satu"/>
            <Button
                android:id="@+id/dua"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/dua"/>
            <Button
                android:id="@+id/tiga"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/tiga"/>
            <Button
                android:id="@+id/tambah"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/tambah"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/posneg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/posneg"/>
            <Button
                android:id="@+id/kosong"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/kosong"/>
            <Button
                android:id="@+id/koma"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/koma"/>
            <Button
                android:id="@+id/samadengan"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/samadengan"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>